zK8s.yml
Parameters:
  KeyName:
    Description: Name of an existing EC2 key pair for SSH access to the EC2 instance.
    Type: AWS::EC2::KeyPair::KeyName
    Default: cfn-key-1

  ImageId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2

  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Default: subnet-05f3455b5de903722

Resources:
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: My SG with SSH, HTTP, HTTPS, Ping
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  EC2LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: EC2LaunchTemplate
      LaunchTemplateData:
        ImageId: !Ref ImageId
        InstanceType: t2.medium
        KeyName: !Ref KeyName
        SecurityGroupIds:
          - !GetAtt EC2SecurityGroup.GroupId
        UserData:
          Fn::Base64: |
            #!/bin/bash
            setenforce 0
            sed -i --follow-symlinks 's/SELINUX=enforcing/SELINUX=disabled/g' /etc/sysconfig/selinux
            systemctl stop firewalld
            systemctl disable firewalld
            sysctl -w net.ipv4.ip_forward=1
            echo "172.31.0.11 z-master1" >> /etc/hosts
            echo "172.31.0.12 z-master2" >> /etc/hosts
            echo "172.31.0.13 z-master3" >> /etc/hosts
            echo "172.31.0.14 z-worker1" >> /etc/hosts
            echo "172.31.0.15 z-worker2" >> /etc/hosts
            echo "172.31.0.16 z-worker3" >> /etc/hosts
            echo "172.31.0.18 z-gitlab" >> /etc/hosts
            echo "172.31.0.19 z-rancher" >> /etc/hosts
            echo "172.31.0.20 z-cicd" >> /etc/hosts

  Master1Instance:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2LaunchTemplate
        Version: !GetAtt EC2LaunchTemplate.LatestVersionNumber
      SubnetId: !Ref SubnetId
      PrivateIpAddress: 172.31.0.11
      Tags:
        - Key: Name
          Value: z-master1

  Master2Instance:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2LaunchTemplate
        Version: !GetAtt EC2LaunchTemplate.LatestVersionNumber
      SubnetId: !Ref SubnetId
      PrivateIpAddress: 172.31.0.12
      Tags:
        - Key: Name
          Value: z-master2

  Master3Instance:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2LaunchTemplate
        Version: !GetAtt EC2LaunchTemplate.LatestVersionNumber
      SubnetId: !Ref SubnetId
      PrivateIpAddress: 172.31.0.13
      Tags:
        - Key: Name
          Value: z-master3

  Worker1Instance:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2LaunchTemplate
        Version: !GetAtt EC2LaunchTemplate.LatestVersionNumber
      SubnetId: !Ref SubnetId
      PrivateIpAddress: 172.31.0.14
      Tags:
        - Key: Name
          Value: z-worker1

  Worker2Instance:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2LaunchTemplate
        Version: !GetAtt EC2LaunchTemplate.LatestVersionNumber
      SubnetId: !Ref SubnetId
      PrivateIpAddress: 172.31.0.15
      Tags:
        - Key: Name
          Value: z-worker2

  Worker3Instance:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2LaunchTemplate
        Version: !GetAtt EC2LaunchTemplate.LatestVersionNumber
      SubnetId: !Ref SubnetId
      PrivateIpAddress: 172.31.0.16
      Tags:
        - Key: Name
          Value: z-worker3

  GitLabInstance:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2LaunchTemplate
        Version: !GetAtt EC2LaunchTemplate.LatestVersionNumber
      SubnetId: !Ref SubnetId
      PrivateIpAddress: 172.31.0.18
      Tags:
        - Key: Name
          Value: z-gitlab

  RancherInstance:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2LaunchTemplate
        Version: !GetAtt EC2LaunchTemplate.LatestVersionNumber
      SubnetId: !Ref SubnetId
      PrivateIpAddress: 172.31.0.19
      Tags:
        - Key: Name
          Value: z-rancher

  CICDInstance:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2LaunchTemplate
        Version: !GetAtt EC2LaunchTemplate.LatestVersionNumber
      SubnetId: !Ref SubnetId
      PrivateIpAddress: 172.31.0.20
      Tags:
        - Key: Name
          Value: z-cicd
      # Neu insert user data ben duoi se ghi de len user data cua template
      # UserData:
      #   Fn::Base64: |
      #      #!/bin/bash
      #      yum install git -y
      #      mkdir kubernetes_installation/
      #      cd kubernetes_installation
      #      git clone https://github.com/kubernetes-sigs/kubespray.git --branch release-2.16
      #      cd kubespray
      #      cp -rf inventory/sample inventory/z-cluster
      #      cd inventory/z-cluster
      #      wget https://raw.githubusercontent.com/MamNonDevOps/k8s-cloudformation-demo/main/cicd-host.yaml
